--- a/src/style/style.css
+++ b/src/style/style.css
@@ -81,6 +81,25 @@ nav {
 .sub-nav-links {
   display: none;
 }
+.nav-links a {
+  position: relative;
+}
+.nav-links a::after {
+  content: "";
+  position: absolute;
+  background-color: var(--clr-primary-700);
+  padding: 0.1rem;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in;
+}
+.nav-links a:hover:after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
 .burger > div {
   width: 3rem;
   padding: 0.15rem;
@@ -500,12 +519,9 @@ footer h4 {
     font-weight: 500;
   }
   .hero-section {
-    height: 90vh;
+    min-height: 90vh;
   }
 
-  .hero-section {
-    max-height: 90vh;
-  }
   .hero-content {
     width: 60%;
   }
