--- a/src/style/style.css
+++ b/src/style/style.css
@@ -38,6 +38,7 @@ html {
 .project-header-section .container,
 .about-header-section .container {
   position: relative;
+  z-index: -200;
 }
 .container {
   width: 90%;
@@ -67,44 +68,73 @@ html {
 /************************ END OF GLOBAL VARIABLES/ UTILITY HELPER SECTION *************************/
 
 /************************ START OF NAV SECTION *************************/
+body {
+  overflow-x: hidden;
+}
+
 nav {
   display: flex;
   width: 90%;
-  max-height: 10vh;
   margin: auto;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
   padding: 3rem 0;
 }
 
-.nav-links,
 .sub-nav-links {
   display: none;
 }
+
+.nav-links {
+  position: absolute;
+  right: 0;
+  top: 8rem;
+  height: 60vh;
+  max-height: 60vh;
+  background-color: var(--clr-primary);
+  transform: translateX(100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  transition: transform 500ms ease-in;
+  width: 100%;
+  z-index: 1000;
+}
+
 .nav-links a {
   position: relative;
+  font-family: var(--ff-primary);
+  font-size: 1.8rem;
+  font-weight: 300;
+  text-decoration: none;
+  letter-spacing: 0.019rem;
+  color: white;
 }
-.nav-links a::after {
-  content: "";
-  position: absolute;
-  background-color: var(--clr-primary-700);
-  padding: 0.1rem;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  transform-origin: right;
-  transform: scaleX(0);
-  transition: transform 250ms ease-in;
+.burger {
+  display: block;
+  cursor: pointer;
 }
-.nav-links a:hover:after {
-  transform: scaleX(1);
-  transform-origin: left;
-}
-.burger > div {
-  width: 3rem;
-  padding: 0.15rem;
+.burger div {
+  width: 25px;
+  height: 3px;
   background-color: var(--clr-primary);
-  margin: 0.3rem 0;
+  margin: 5px;
+  transition: all 300ms ease;
+}
+
+.nav-active {
+  transform: translateX(0%);
+}
+
+.line-effect .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+.line-effect .line2 {
+  opacity: 0;
+}
+.line-effect .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
 }
 /************************ END OF NAV SECTION *************************/
 
@@ -114,6 +144,7 @@ nav {
   width: 90%;
   margin: 3rem auto;
   background-color: var(--clr-hero-bkg);
+  z-index: -200;
 }
 .hero-section .container::before {
   content: "";
@@ -173,6 +204,7 @@ mark.bold-blue {
 .project-header-section h2 {
   background-color: white;
   color: var(--clr-primary);
+  z-index: 200;
 }
 .project-header-section h2::before {
   background-color: var(--clr-hr);
@@ -188,6 +220,9 @@ mark.bold-blue {
 
 .project-ht-section .container,
 .project-lgp-section .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 90%;
   margin: auto;
 }
@@ -405,24 +440,44 @@ footer h4 {
     display: none;
   }
 
-  .nav-links,
-  .sub-nav-links {
-    display: flex;
-  }
   .nav-links {
     display: flex;
+    flex-direction: row;
+    background-color: transparent;
     width: 45%;
     max-width: 50rem;
-    justify-content: space-between;
+    max-height: 10vh;
+    min-height: 100px;
+    top: 0;
+    transform: translateX(-50%);
+    justify-content: space-around;
     align-items: center;
   }
   .nav-links a {
+    position: relative;
     font-family: var(--ff-primary);
     font-size: 1.3rem;
     font-weight: 500;
     text-decoration: none;
     letter-spacing: 0.019rem;
     color: var(--clr-primary);
+  }
+
+  .nav-links a::after {
+    content: "";
+    position: absolute;
+    background-color: var(--clr-primary-700);
+    padding: 0.1rem;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform 250ms ease-in;
+  }
+  .nav-links a:hover:after {
+    transform: scaleX(1);
+    transform-origin: left;
   }
 
   .sub-nav-links {
@@ -460,13 +515,6 @@ footer h4 {
     flex-direction: column;
     justify-content: center;
   }
-  /* .project-ht-section img,
-.project-lgp-section img {
-  width: 100%;
-  height: 100%;
-  max-height: 31.6rem;
-  object-fit: cover;
-} */
 }
 
 @media (min-width: 812px) {
@@ -595,6 +643,12 @@ footer h4 {
   }
   .split-hero img {
     width: 64rem;
+  }
+  .nav-links {
+    max-width: 80rem;
+    margin-left: 100rem;
+    justify-content: space-around;
+    padding: 0 3rem;
   }
 }
 
