--- a/src/style/style.css
+++ b/src/style/style.css
@@ -68,9 +68,6 @@ html {
 /************************ END OF GLOBAL VARIABLES/ UTILITY HELPER SECTION *************************/
 
 /************************ START OF NAV SECTION *************************/
-body {
-  overflow-x: hidden;
-}
 
 nav {
   display: flex;
@@ -139,6 +136,9 @@ nav {
 /************************ END OF NAV SECTION *************************/
 
 /************************ START OF HERO SECTION *************************/
+body {
+  overflow-x: hidden;
+}
 .hero-section .container {
   position: relative;
   width: 90%;
@@ -514,6 +514,35 @@ footer h4 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+
+  .fade-in {
+    opacity: 0;
+    transition: opacity 250ms ease-in;
+  }
+
+  .fade-in.appear {
+    opacity: 1;
+  }
+
+  .from-left {
+    transform: translateX(-50%);
+  }
+
+  .from-right {
+    transform: translateX(50%);
+  }
+
+  .from-left,
+  .from-right {
+    transition: opacity 250ms ease-in, transform 400ms ease-in;
+    opacity: 0;
+  }
+
+  .from-left.appear,
+  .from-right.appear {
+    transform: translateX(0);
+    opacity: 1;
   }
 }
 
