--- a/style/style.css
+++ b/style/style.css
@@ -6,16 +6,14 @@
   --clr-accent: #576589;
   --clr-black-accent: #3a3a3b;
   --clr-hr: #b3c0e2;
-
   --ff-primary: "Montserrat", sans-serif;
   --ff-sub-header: "BenchNine", sans-serif;
   --ff-content: "Esteban", serif;
 }
-
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
-
 *,
 *::before,
 *::after {
@@ -25,7 +23,6 @@ html {
   box-sizing: border-box;
   text-decoration: none;
 }
-
 .text-center {
   text-align: center;
 }
@@ -34,7 +31,6 @@ html {
   display: flex;
   flex-direction: column;
 }
-
 .project-header-section .container,
 .about-header-section .container {
   position: relative;
@@ -66,9 +62,7 @@ html {
   padding: 0.09rem;
 }
 /************************ END OF GLOBAL VARIABLES/ UTILITY HELPER SECTION *************************/
-
 /************************ START OF NAV SECTION *************************/
-
 nav {
   display: flex;
   width: 90%;
@@ -78,11 +72,9 @@ nav {
   text-align: center;
   padding: 3rem 0;
 }
-
 .sub-nav-links {
   display: none;
 }
-
 .nav-links {
   position: absolute;
   right: 0;
@@ -98,7 +90,6 @@ nav {
   width: 100%;
   z-index: 1000;
 }
-
 .nav-links a {
   position: relative;
   font-family: var(--ff-primary);
@@ -119,11 +110,9 @@ nav {
   margin: 5px;
   transition: all 300ms ease;
 }
-
 .nav-active {
   transform: translateX(0%);
 }
-
 .line-effect .line1 {
   transform: rotate(-45deg) translate(-5px, 6px);
 }
@@ -134,13 +123,11 @@ nav {
   transform: rotate(45deg) translate(-5px, -6px);
 }
 /************************ END OF NAV SECTION *************************/
-
 /************************ START OF HERO SECTION *************************/
 body {
   overflow-x: hidden;
 }
 .hero-section .container {
-  position: relative;
   width: 90%;
   margin: 3rem auto;
   background-color: var(--clr-hero-bkg);
@@ -159,12 +146,14 @@ body {
   border-radius: 50%;
   background-color: white;
 }
-
-.split-hero {
-  padding-top: 7rem;
-  margin: auto;
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 3rem;
+  padding: 8rem 0rem 3rem 0rem;
 }
-
 .hero-content h1 {
   font-family: var(--ff-primary);
   font-size: 4rem;
@@ -175,31 +164,24 @@ body {
   text-align: center;
   width: 80%;
   max-width: 33.6rem;
-  margin: auto;
 }
 .hero-content p {
   font-family: var(--ff-primary);
   font-size: 1.5rem;
   line-height: 26px;
   letter-spacing: 0.6px;
-  padding-top: 8rem;
-  padding-bottom: 5rem;
-  margin: auto;
   width: 90%;
   max-width: 46rem;
 }
-
 mark.bold-blue {
   color: var(--clr-primary);
   font-weight: 700;
   background: none;
 }
-.split-hero img {
+.hero-content img {
   display: none;
 }
-
 /***************************************** END OF HERO SECTION *******************************************/
-
 /************************ START OF PROJECTS SECTION *************************/
 .project-header-section h2 {
   background-color: white;
@@ -212,12 +194,10 @@ mark.bold-blue {
 .project-ht-section {
   margin: 3rem 0;
 }
-
 .project-lgp-section {
   margin-top: 6rem;
   margin-bottom: 5rem;
 }
-
 .project-ht-section .container,
 .project-lgp-section .container {
   display: flex;
@@ -255,9 +235,7 @@ mark.bold-blue {
   max-height: 31.6rem;
   object-fit: cover;
 }
-
 /************************ END OF PROJECTS SECTION *************************/
-
 /************************ START OF ABOUT ME SECTION *************************/
 .about-header-section {
   position: relative;
@@ -277,14 +255,12 @@ mark.bold-blue {
   color: white;
   font-family: var(--ff-primary);
 }
-
 .about-me-section .container .split {
   display: flex;
   flex-direction: column;
   padding: 3rem 0;
   gap: 3rem;
 }
-
 .about-me-section h3 {
   font-weight: 500;
   font-size: 1.7rem;
@@ -300,7 +276,6 @@ mark.bold-blue {
   display: none;
 }
 /************************ END OF ABOUT ME SECTION *************************/
-
 /************************ START OF CONTACT SECTION *************************/
 .contact-header-section {
   margin: 2rem auto;
@@ -315,7 +290,6 @@ mark.bold-blue {
 .contact-header-section h2::before {
   background-color: var(--clr-hr);
 }
-
 .contact-section .container {
   background-color: var(--clr-hero-bkg);
   border-radius: 1.2rem;
@@ -341,7 +315,6 @@ mark.bold-blue {
   padding-top: 2rem;
   margin-bottom: 0.5rem;
 }
-
 .field-message {
   position: relative;
   font-size: 1.4rem;
@@ -355,10 +328,8 @@ textarea {
   padding: 1.2rem;
   border-radius: 0.3rem;
   width: 100%;
-
   outline: none;
 }
-
 .field-name .name-placeholder,
 .field-em .em-placeholder {
   position: absolute;
@@ -368,7 +339,6 @@ textarea {
   color: lightslategrey;
   transition: top 300ms ease, font-size 300ms ease, color 300ms ease;
 }
-
 .field-message .message-placeholder {
   position: absolute;
   left: 1.2rem;
@@ -377,7 +347,6 @@ textarea {
   color: lightslategrey;
   transition: top 300ms ease, font-size 300ms ease, color 300ms ease;
 }
-
 .field-name input:valid,
 .field-name input:focus,
 .field-em input.dirty,
@@ -386,7 +355,6 @@ textarea {
 .field-message textarea:focus {
   border-color: var(--clr-primary);
 }
-
 .field-em input.dirty + .em-placeholder,
 .field-em input:focus + .em-placeholder {
   top: 1rem;
@@ -394,7 +362,6 @@ textarea {
   font-weight: 500;
   color: var(--clr-primar);
 }
-
 .field-name input:valid + .name-placeholder,
 .field-name input:focus + .name-placeholder {
   top: 1rem;
@@ -402,7 +369,6 @@ textarea {
   font-weight: 500;
   color: var(--clr-black-accent);
 }
-
 .field-message textarea:valid + .message-placeholder,
 .field-message textarea:focus + .message-placeholder {
   top: 0.8rem;
@@ -416,7 +382,6 @@ textarea {
   display: flex;
   justify-content: center;
   align-items: center;
-
   padding: 3rem 0;
 }
 button {
@@ -445,7 +410,6 @@ footer h4 {
   .burger {
     display: none;
   }
-
   .nav-links {
     display: flex;
     flex-direction: row;
@@ -468,7 +432,6 @@ footer h4 {
     letter-spacing: 0.019rem;
     color: var(--clr-primary);
   }
-
   .nav-links a::after {
     content: "";
     position: absolute;
@@ -485,7 +448,6 @@ footer h4 {
     transform: scaleX(1);
     transform-origin: left;
   }
-
   .sub-nav-links {
     display: flex;
     width: 9%;
@@ -493,7 +455,6 @@ footer h4 {
     justify-content: space-between;
     align-items: center;
   }
-
   .sub-nav-links a {
     color: var(--clr-accent);
     font-size: 1.5rem;
@@ -521,108 +482,100 @@ footer h4 {
     flex-direction: column;
     justify-content: center;
   }
-
   .fade-in {
     opacity: 0;
     transition: opacity 250ms ease-in;
   }
-
   .fade-in.appear {
     opacity: 1;
   }
-
   .from-left {
     transform: translateX(-50%);
   }
-
   .from-right {
     transform: translateX(50%);
   }
-
   .from-left,
   .from-right {
     transition: opacity 250ms ease-in, transform 400ms ease-in;
     opacity: 0;
   }
-
   .from-left.appear,
   .from-right.appear {
     transform: translateX(0);
     opacity: 1;
   }
 }
-
-@media (min-width: 812px) {
+@media (min-width: 896px) {
   .hero-section .container::before {
     display: none;
   }
-  .split-hero {
-    display: flex;
-    width: 90%;
-    max-width: 1800px;
+  .hero-content {
+    align-items: flex-start;
+    width: 80%;
+    max-width: 70rem;
+    margin: auto;
+    position: relative;
   }
   .hero-content h1 {
-    font-size: 4rem;
-    text-align: left;
+    font-size: 4.4rem;
+    text-align: start;
     line-height: 4.4rem;
   }
   .hero-content p {
     font-size: 1.5rem;
     line-height: 2.5rem;
-    text-align: left;
-    width: 73%;
-    padding: 5rem 0 7rem 0;
-    position: relative;
+    width: 38rem;
   }
-  .split-hero img {
+  .hero-content img {
     display: block;
     position: absolute;
-    top: -15%;
-    right: -5%;
-    width: 40rem;
+    top: -12%;
+    right: -15%;
+    width: 30rem;
   }
-}
-@media (min-width: 896px) {
   .nav-links a {
     font-size: 1.4rem;
   }
-
   .about-me-section .container .split {
     display: flex;
     flex-direction: row;
   }
-
   .about-me-section .container .split > * {
     flex: 1 1 100%;
   }
 }
 @media (min-width: 1224px) {
+  .hero-section .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 80%;
+  }
+  .hero-content img {
+    position: absolute;
+    top: -8%;
+    right: -17%;
+    width: 50rem;
+  }
   .nav-links a {
     font-size: 1.7rem;
     font-weight: 500;
   }
-  .hero-section {
-    min-height: 90vh;
-  }
-
   .hero-content {
-    width: 60%;
+    max-width: 90rem;
+    justify-content: space-between;
+    gap: 8rem;
   }
   .hero-content h1 {
-    max-width: 66rem;
-    font-size: 6.5rem;
-    line-height: 6.6rem;
-    margin: 0;
+    font-size: 6rem;
+    line-height: 7rem;
+    max-width: 65rem;
   }
   .hero-content p {
-    font-size: 2rem;
-    line-height: 3.4rem;
-    margin: 0;
-    max-width: 60rem;
-    padding: 14rem 0rem 11rem 0rem;
-  }
-  .split-hero img {
-    width: 60rem;
+    width: 70rem;
+    font-size: 1.8rem;
+    line-height: 3rem;
   }
   .ht-content h3,
   .lgp-content h3 {
@@ -641,12 +594,10 @@ footer h4 {
   .about-me-section .container {
     max-width: 150rem;
   }
-
   .about-me-section h3 {
     font-size: 2rem;
     font-weight: 500;
   }
-
   .about-me-section p {
     max-width: 30rem;
     font-size: 1.6rem;
@@ -663,51 +614,46 @@ footer h4 {
     width: 12rem;
   }
 }
-
 @media (min-width: 1400px) {
-  .hero-content h1 {
-    max-width: 70rem;
-    font-size: 7rem;
-    text-align: left;
-    line-height: 8rem;
-  }
-  .hero-content p {
-    font-size: 2.3rem;
-    line-height: 3.4rem;
-    padding: 14rem 0rem 8rem 0rem;
-  }
-  .split-hero img {
-    width: 64rem;
-  }
   .nav-links {
     max-width: 80rem;
     margin-left: 100rem;
     justify-content: space-around;
     padding: 0 3rem;
   }
+  .hero-section {
+    padding: 5rem 10rem 10rem 10rem;
+  }
+  .hero-section .container {
+    padding: 0rem 4rem 4rem 0;
+  }
+  .hero-content h1 {
+    font-size: 6rem;
+  }
+  .hero-content img {
+    position: absolute;
+    top: -10%;
+    right: -25%;
+    width: 50rem;
+  }
+}
+
+@media (min-width: 1550px) {
+  .hero-content {
+    max-width: 120rem;
+    justify-content: space-between;
+    gap: 8rem;
+  }
+
+  .hero-content img {
+    position: absolute;
+    top: -10%;
+    right: -10%;
+    width: 55rem;
+  }
 }
 
 @media (min-width: 1824px) {
-  .hero-section .container {
-    padding-bottom: 3rem;
-  }
-
-  .hero-content {
-    width: 60%;
-    margin-top: 5rem;
-    margin-left: 100px;
-  }
-  .hero-content p {
-    letter-spacing: 2.3px;
-
-    max-width: 100rem;
-    padding: 14rem 0rem 10rem 0rem;
-  }
-  .split-hero img {
-    width: 75rem;
-    top: -13%;
-  }
-
   .project-ht-section .container,
   .project-lgp-section .container {
     display: flex;
